--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,10 @@
 
   <groupId>loci</groupId>
   <artifactId>pom-loci</artifactId>
-  <version>1.1</version>
+  <version>1.2-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>LOCI Software</name>
-  <description>Umbrella project for LOCI software projects.</description>
   <url>http://loci.wisc.edu/software</url>
 
   <organization>
