--- a/pom.xml
+++ b/pom.xml
@@ -70,4 +70,18 @@ Wisconsin-Madison.</organizationName>
 		</repository>
 	</repositories>
 
+	<distributionManagement>
+		<!-- NB: for deploying to maven.imagej.net -->
+		<repository>
+			<id>imagej.releases</id>
+			<name>ImageJ Releases Repository</name>
+			<url>dav:http://maven.imagej.net/content/repositories/releases</url>
+		</repository>
+		<snapshotRepository>
+			<id>imagej.snapshots</id>
+			<name>ImageJ Snapshots Repository</name>
+			<url>dav:http://maven.imagej.net/content/repositories/snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>
+
 </project>
