--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,13 @@ Projects wishing to use pom-loci as a parent project need to override the &lt;na
 			<timezone>-6</timezone>
 		</developer>
 	</developers>
+	<contributors>
+		<!--
+		NB: Need a least one element to override the parent.
+		See: http://jira.codehaus.org/browse/MNG-5220
+		-->
+		<contributor><name>None</name></contributor>
+	</contributors>
 
 	<mailingLists>
 		<mailingList>
