--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-		http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0   http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -14,7 +11,7 @@
 
 	<groupId>loci</groupId>
 	<artifactId>pom-loci</artifactId>
-	<version>2.0.0-SNAPSHOT</version>
+	<version>2.0.0</version>
 	<packaging>pom</packaging>
 
 	<name>LOCI Software</name>
@@ -71,7 +68,7 @@ Projects wishing to use pom-loci as a parent project need to override the &lt;na
 	<scm>
 		<connection>scm:git:git://github.com/uw-loci/pom-loci</connection>
 		<developerConnection>scm:git:git@github.com:uw-loci/pom-loci</developerConnection>
-		<tag>HEAD</tag>
+		<tag>pom-loci-2.0.0</tag>
 		<url>http://github.com/uw-loci/pom-loci</url>
 	</scm>
 	<issueManagement>
