--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>loci</groupId>
 	<artifactId>pom-loci</artifactId>
-	<version>3.0.0-SNAPSHOT</version>
+	<version>3.0.0</version>
 	<packaging>pom</packaging>
 
 	<name>LOCI Software</name>
@@ -63,7 +63,7 @@
 	<scm>
 		<connection>scm:git:git://github.com/uw-loci/pom-loci</connection>
 		<developerConnection>scm:git:git@github.com:uw-loci/pom-loci</developerConnection>
-		<tag>HEAD</tag>
+		<tag>pom-loci-3.0.0</tag>
 		<url>http://github.com/uw-loci/pom-loci</url>
 	</scm>
 	<issueManagement>
